--- a/frontend/src/components/LikeButton/LikeButton.css
+++ b/frontend/src/components/LikeButton/LikeButton.css
@@ -24,7 +24,7 @@
 @keyframes flyUp {
     0% {
         opacity: 1;
-        transform: translate(0, 0) scale(1.5);
+        transform: translate(0, 0) scale(1.7);
     }
     100% {
         opacity: 0;
